# getopts-macro-rs

./: Cargo.toml  README.md
.github/workflows/: push.yml
examples/: simple-cli.rs
src/: lib.rs
