[package]
name = "getopts-macro"
version = "0.1.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/getopts-macro-rs"
keywords = ["no-std", "getopts"]
description = "Using macros to concisely define the getopts"

license = "MIT"
readme = "README.md"

[dependencies]
getopts = "0.2.21"
