[package]
name = "getopts-macro"
version = "0.1.8"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/getopts-macro-rs"
keywords = ["no-std", "getopts", "arg", "builder"]
categories = ["command-line-interface"]
description = "Use macros to cleanly define getopts options"

license = "MIT"
readme = "README.md"

[dependencies]
getopts = "0.2.21"
